Resolve color shifting issue on post form.

--- a/app/assets/stylesheets/profile_timeline.css.scss
+++ b/app/assets/stylesheets/profile_timeline.css.scss
@@ -78,7 +78,7 @@
   display: block;
   border: 1px solid #ccc;
   border-top: none;
-  background: rgb(246, 247, 248);
+  background: white;
 }
 
 
@@ -101,7 +101,7 @@
   width: 30px;
   float: left;
   margin: 10px 0px 10px 10px;
-  background: rgb(246, 247, 248);
+  background: white;
 }
 
 .poster-picture {
@@ -110,12 +110,12 @@
   width: 30px;
   float: left;
   margin-right: 5px;
-  background: rgb(246, 247, 248);
+  background: white;
 }
 
 .post-form-input:focus {
   outline: none;
-  background-color: rgb(246, 247, 248);
+  background-color: white;
 }
 
 .post-form-footer {
